# Benchmark-evm-wasm

./: .gitignore  Cargo.toml  README.md  compile.sh  hardhat.config.ts  package-lock.json  package.json
bench/: bench.ts  helper.ts  ink-lib.ts  solidity-lib.ts
contracts/cross-contracts-call/ink/PSP22/: Cargo.toml  lib.rs
contracts/cross-contracts-call/ink/caller/: Cargo.toml  lib.rs
contracts/cross-contracts-call/solidity/: caller.sol  erc20.sol
contracts/math/arithmetic/ink/: Cargo.toml  lib.rs
contracts/math/arithmetic/solidity/: arithmetic.sol
contracts/math/power/ink/: Cargo.toml  lib.rs
contracts/math/power/solidity/: power.sol
